# Asmr_Library

./: .gitignore  mock.html  プロンプト.txt
asmr-player/: .gitignore  README.md  clean_test.bat  package-lock.json  package.json
asmr-player/src/: App.tsx  index.css
asmr-player/src-tauri/: 2  Cargo.toml  tauri.conf.json
asmr-player/src-tauri/capabilities/: default.json
asmr-player/src-tauri/migrations/: 20241210120000_init.sql  20251216020000_add_metadata.sql  20251217010000_add_playlists.sql  20251217020000_playlist_tracks.sql  20251217030000_play_history.sql
asmr-player/src-tauri/src/: audio.rs  lib.rs  main.rs  scanner.rs  scraper.rs
asmr-player/src/components/: AutocompleteInput.tsx  MetadataEditor.tsx  PlayerBar.tsx  PlaylistPage.tsx  Sidebar.tsx  TagInput.tsx  TagsPage.tsx  TrackList.tsx  TrackPlaylistModal.tsx  VoiceActorsPage.tsx  WorkDetailModal.tsx  WorkGrid.tsx
asmr-player/src/hooks/: useKeyboardShortcuts.ts  useLibrary.ts  usePlayerStore.ts
