[package]
name = "asmr-player"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "asmr_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
rodio = { version = "0.20.1", features = ["symphonia-all"] }
lofty = "0.21" # Using improved metadata extraction
spectrum-analyzer = "1.7.0"
walkdir = "2.5.0"
reqwest = { version = "0.12.25", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }
scraper = "0.25.0"
regex = "1"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

